--- a/src/components/ProblemHistoryCard/ProblemHistoryCard.module.css
+++ b/src/components/ProblemHistoryCard/ProblemHistoryCard.module.css
@@ -1,6 +1,6 @@
 .ProblemHistoryCard {
     display: grid;
-    grid-template-column: 7fr 5fr;
+    grid-template-columns: 7fr 5fr;
     gap: var(--gap-m);
     flex: 1;
     line-height: 1.5;
